<resources>
    <string name="app_name">Registration Form 2 </string>
    <string name="first_name">First Name</string>
    <string name="address">Address</string>
    <string name="email">Email id</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="enter_all_details">Enter the Details</string>
    <string name="birth_info">Birth Information</string>
    <string name="sex">Sex</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="registration_form">Registration form</string>
    <string name="confirmation_page">Confirmation Page</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="view_details">View Details</string>
    <string name="save_details">Save Details</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up </string>
    <string name="login">login</string>
    <string name="welcome">Welcome</string>
    <string name="login_successful">Login Successful !</string>


    <string-array name="date_menu">
        <item>D</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month_menu">
        <item>M</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="year_menu">
        <item>Y</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>


    </string-array>

</resources>
